Bug 148938 - Hints while moving sheets are not visible in dark mode
Summary: Hints while moving sheets are not visible in dark mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.1.3 release
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: UI-Theming Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-05-04 18:54 UTC by Rafael Lima
Modified: 2022-10-10 19:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots showing the problem (41.85 KB, application/vnd.oasis.opendocument.graphics)
2022-05-04 18:54 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2022-05-04 18:54:31 UTC
Created attachment 179925 [details]
Screenshots showing the problem

In LO Calc, when you move a sheet using the mouse by dragging and dropping them, a hint is shown so that the user knows where the moved sheet will be placed.

See the attached ODG file with screenshots showing the problem.

In light mode, the hint is black as it's expected to be (see top image in the ODG file). However, in dark mode the hint retains its black color and has no contrast with the dark background (see image at the bottom of the ODG file).

In dark mode the hint should use a light color for better contrast. This problem happens in kf5 and gtk3.

System info:
Version: 7.3.2.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 12; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: pt-BR
Ubuntu package version: 1:7.3.2~rc2-0ubuntu0.21.10.1~lo1
Calc: threaded
Comment 1 m_a_riosv 2022-05-08 15:14:33 UTC
It happens for me if Windows it's also in dark mode.
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: f8e11c6480ff0005715b989a6d4e2e10a3816cf6
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 2 Rafael Lima 2022-09-30 22:42:39 UTC
Proposed patch available for review at:

https://gerrit.libreoffice.org/c/core/+/140760
Comment 3 Commit Notification 2022-10-06 04:45:42 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1045aeecb20aeefd7f6181288853f9a89305c9ba

tdf#148938 Fix position arrows when dragging Calc tabs in dark mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.