tdf#148938 Fix position arrows when dragging Calc tabs in dark mode

In Calc, when you drag a tab to move it, the arrows pointing to where the tab will be positioned are always in black, even in dark mode.

This patch fixes this issue.

Change-Id: I9079099c5ac1a8fb767eaa105cf8863e54d0ec3f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140760
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>